force-app/main/default/objects/SCOC__CreditBureauResponse__c/SCOC__CreditBureauResponse__c.object-meta.xml
<CustomObject>
    <description>Credit Bureau Response.</description>
    <label>Credit Bureau Response</label>
    <nameField>
        <displayFormat>CBR-{00000}</displayFormat>
        <label>Credit Bureau Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Bureau Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>