force-app/main/default/objects/SCOC__CreditBureauResponse__c/fields/SCOC__CreditExternalTransactionID__c.field-meta.xml
<CustomField>
    <fullName>SCOC__CreditExternalTransactionID__c</fullName>
    <description>The system automatically updates this required field with a unique string to reference a specific credit transaction inside the nCino platform.</description>
    <externalId>true</externalId>
    <label>Credit External Transaction ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>