force-app/main/default/objects/SCOC__CreditBureauResponse__c/fields/SCOC__nCinoProcessingPackage__c.field-meta.xml
<CustomField>
    <fullName>SCOC__nCinoProcessingPackage__c</fullName>
    <description>nCino Response Processing Package.</description>
    <label>nCino Processing Package</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>