force-app/main/default/objects/SCOC__CreditBureauResponse__c/fields/SCOC__nCinoProcessingVersion__c.field-meta.xml
<CustomField>
    <fullName>SCOC__nCinoProcessingVersion__c</fullName>
    <description>nCino Response Processing Version.</description>
    <label>nCino Processing Version</label>
    <length>11</length>
    <required>true</required>
    <type>Text</type>
</CustomField>