force-app/main/default/objects/SCOC__CreditBureauResponse__c/fields/SCOC__ReportType__c.field-meta.xml
<CustomField>
    <fullName>SCOC__ReportType__c</fullName>
    <description>Credit Bureau response report type.</description>
    <label>Report Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>