force-app/main/default/objects/SCOC__CreditBureauResponse__c/fields/SCOC__TransactionRefId__c.field-meta.xml
<CustomField>
    <fullName>SCOC__TransactionRefId__c</fullName>
    <description>The system automatically updates this required field with a unique string to reference a specific credit transaction outside the nCino platform.</description>
    <label>Transaction Request Reference ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>