force-app/main/default/objects/SCOC__CreditBureauResponse__c/fields/SCOC__Version__c.field-meta.xml
<CustomField>
    <fullName>SCOC__Version__c</fullName>
    <description>Credit Bureau response version.</description>
    <label>Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>